--- a/clamp-calc/package.json
+++ b/clamp-calc/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-lorem-ipsum": "^1.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
